# medical-imaging-network-transport

./: .gitignore  20110527_MeetingNotes.md  20110610_MeetingNotes.md  20110624_MeetingNotes.md  20110708_MeetingNotes.md  20110715_MeetingNotes.md  20110722_MeetingNotes.md  20110825_MeetingNotes.md  20110916_MeetingNotes.md  20111006_MeetingNotes.md  20111013_MeetingNotes.md  20111103_MeetingNotes.md  20111117_MeetingNotes.md  20111208_MeetingNotes.md  20111213_MeetingNotes.md  20111220_MeetingNotes.md  20120119_MeetingNotes.md  20120216_MeetingNotes.md  20120230_MeetingNotes.md  20120315_MeetingNotes.md  20120329_MeetingNotes.md  Backlog.md  FAQ.md  FirstExperience.md  GettingStarted.md  Harris_Mint_Performance_Testing.md  Historical.md  LICENSE  MINT Reference Implementation Documentation.docx  MINTValidationPage.md  MINTWG_ActionItems.md  MINT_Performance_Testing.md  MeetingNotes01072011.md  MeetingNotes01142011.md  MeetingNotes01282011.md  MeetingNotes02182011.md  MeetingNotes03042011.md  MeetingNotes03182011.md  MeetingNotes04012011.md  MeetingNotes04152011.md  (+12 more)
DICOM2MINT/: .classpath  .project  DCM2MINT.bat  DICOM.xml  build.xml
DICOM2MINTImport/: .classpath  .project  DCM2MINT.bat  DCM2Mint  build.xml
DICOM2Mint/: .classpath  .project  build.xml
DICOMSend/: DICOMSend  build.xml  dcmsndcfg.xml
MINT2DICOM/: .classpath  .project  MINT2DICOM.bat  build.xml
MINTCommon/: .classpath  .project  build.xml
MINTCppSDK/: CMakeLists.txt
MINTCppSDK/DICOM2MINTImport/: tarlib.h
MINTCppSDK/MINTCommon/: BinaryData.cpp  BinaryData.h  MetaBinaryPair.cpp
MINTCppSDK/doc/html/: _study_8h_source.html  class_c_tar-members.html  class_c_tar_callback-members.html  class_instance.html  class_study-members.html  class_study.html  struct_tar_file.html
MINTCppSDK/doc/html/search/: classes_61.html  functions_69.html  search.js
MINTCppSDK/doc/latex/: class_attribute.tex
MINTDataDictionary/: .classpath  .project
MINTJavaSDK/: .classpath  .project  build.gradle  build.xml  pom.xml
MINTMetadata/: .classpath  .project  Header.txt  build.xml
MINTServer/: .classpath  .project  build.xml  pom.xml
docs/: MeetingNotes-20100816-JHU.pptx
trunk/: MINT Reference Implementation Documentation.docx  build-common.xml  mint.ipr
wiki/: 20110527_MeetingNotes.wiki  20110610_MeetingNotes.wiki  20110624_MeetingNotes.wiki  20110708_MeetingNotes.wiki  20110715_MeetingNotes.wiki  20110722_MeetingNotes.wiki  Backlog.wiki  (+49 more)
(+840 files in other folders)
